--- a/RankFit/Diary/Diary.storyboard
+++ b/RankFit/Diary/Diary.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Diary-->
+        <!--다이어리-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="DiaryViewController" id="Y6W-OH-hqX" customClass="DiaryViewController" customModule="RankFit" customModuleProvider="target" sceneMemberID="viewController">
@@ -27,7 +27,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="JDf-k4-6OG">
+                                <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" id="cPa-3g-oRc">
                                     <rect key="frame" x="0.0" y="-91" width="390" height="761"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="color" systemColor="systemOrangeColor"/>
@@ -46,6 +46,10 @@
                                                         <constraint firstAttribute="width" secondItem="Z7Z-i7-OnM" secondAttribute="height" multiplier="1:1" id="9fI-lZ-Eau"/>
                                                     </constraints>
                                                 </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="t57-cn-0mj">
+                                                    <rect key="frame" x="58.666666666666657" y="65.666666666666671" width="20" height="20"/>
+                                                    <color key="color" systemColor="systemOrangeColor"/>
+                                                </activityIndicatorView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X6D-0f-f3P">
                                                     <rect key="frame" x="0.0" y="0.0" width="137" height="151"/>
                                                     <subviews>
@@ -69,7 +73,9 @@
                                                 <constraint firstItem="Z7Z-i7-OnM" firstAttribute="top" secondItem="9a4-zH-xE9" secondAttribute="top" id="6zg-56-5ot"/>
                                                 <constraint firstAttribute="trailing" secondItem="Z7Z-i7-OnM" secondAttribute="trailing" id="9zc-yA-INb"/>
                                                 <constraint firstAttribute="bottom" secondItem="X6D-0f-f3P" secondAttribute="bottom" id="CJ8-fl-Iiz"/>
+                                                <constraint firstItem="t57-cn-0mj" firstAttribute="centerX" secondItem="9a4-zH-xE9" secondAttribute="centerX" id="RDf-wX-Yej"/>
                                                 <constraint firstAttribute="trailing" secondItem="X6D-0f-f3P" secondAttribute="trailing" id="UhF-2x-QAc"/>
+                                                <constraint firstItem="t57-cn-0mj" firstAttribute="centerY" secondItem="9a4-zH-xE9" secondAttribute="centerY" id="cDn-5C-EI2"/>
                                                 <constraint firstAttribute="bottom" secondItem="Z7Z-i7-OnM" secondAttribute="bottom" id="dEZ-0d-MLr"/>
                                                 <constraint firstItem="X6D-0f-f3P" firstAttribute="leading" secondItem="9a4-zH-xE9" secondAttribute="leading" id="gVd-Mk-B1L"/>
                                                 <constraint firstItem="Z7Z-i7-OnM" firstAttribute="leading" secondItem="9a4-zH-xE9" secondAttribute="leading" id="zVM-KO-919"/>
@@ -79,6 +85,7 @@
                                         <connections>
                                             <outlet property="ImageView" destination="Z7Z-i7-OnM" id="QjT-0t-KwD"/>
                                             <outlet property="frontView" destination="X6D-0f-f3P" id="w8U-0r-F1V"/>
+                                            <outlet property="indicator" destination="t57-cn-0mj" id="8f1-aJ-RYH"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -93,12 +100,12 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ODH-mM-mtO" secondAttribute="bottom" id="bKw-Ja-fJO"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Diary" image="photo.on.rectangle.angled" catalog="system" id="FPC-VB-xLy"/>
+                    <tabBarItem key="tabBarItem" title="다이어리" image="photo.on.rectangle.angled" catalog="system" id="FPC-VB-xLy"/>
                     <navigationItem key="navigationItem" id="lXs-U9-I6C"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="ODH-mM-mtO" id="5Kc-mM-sNe"/>
-                        <outlet property="indicator" destination="JDf-k4-6OG" id="3ne-DK-gr8"/>
+                        <outlet property="indicator" destination="cPa-3g-oRc" id="ALl-KP-Wn6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
