--- a/RankFit/LaunchScreen/Base.lproj/LaunchScreen.storyboard
+++ b/RankFit/LaunchScreen/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RankFit.png" translatesAutoresizingMaskIntoConstraints="NO" id="zZb-tY-xAI">
+                                <rect key="frame" x="75" y="208.66666666666663" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="zZb-tY-xAI" secondAttribute="height" multiplier="1:1" id="yZs-vH-3I8"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zZb-tY-xAI" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-100" id="ICa-eU-v21"/>
+                            <constraint firstItem="zZb-tY-xAI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="d8u-oz-QIr"/>
+                            <constraint firstItem="zZb-tY-xAI" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="eQc-bc-t9O"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,8 +39,9 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="RankFit.png" width="1024" height="1024"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
