--- a/RankFit/Home/Home.storyboard
+++ b/RankFit/Home/Home.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--홈-->
+        <!--Home View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" id="Y6W-OH-hqX" customClass="HomeViewController" customModule="RankFit" customModuleProvider="target" sceneMemberID="viewController">
@@ -33,7 +33,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <color key="backgroundColor" systemColor="systemCyanColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="1Ds-rp-bDS" secondAttribute="trailing" constant="15" id="7dv-ZI-Lh7"/>
                                     <constraint firstAttribute="bottom" secondItem="1Ds-rp-bDS" secondAttribute="bottom" constant="10" id="MDq-Tf-g6l"/>
@@ -60,17 +60,24 @@
                                             <rect key="frame" x="0.0" y="0.0" width="349" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 순위" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sk0-21-9Lu">
-                                                    <rect key="frame" x="22" y="38" width="61" height="24"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flames" translatesAutoresizingMaskIntoConstraints="NO" id="NcF-Ts-46Z">
+                                                    <rect key="frame" x="18.666666666666629" y="25" width="42" height="49"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="65" id="b3K-Jp-t5D"/>
+                                                        <constraint firstAttribute="width" constant="35" id="IEh-mq-gIN"/>
+                                                        <constraint firstAttribute="width" secondItem="NcF-Ts-46Z" secondAttribute="height" multiplier="1:1" id="iBI-eP-1EZ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 순위" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sk0-21-9Lu">
+                                                    <rect key="frame" x="69" y="38" width="65" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="65" id="E50-P1-0pM"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exercises" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thX-nz-TFv">
-                                                    <rect key="frame" x="90" y="39.333333333333343" width="76" height="21.666666666666664"/>
+                                                    <rect key="frame" x="145" y="40" width="76" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -78,11 +85,13 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="Sk0-21-9Lu" firstAttribute="leading" secondItem="ZMx-Ds-W1i" secondAttribute="leading" constant="30" id="CpT-jQ-0qa"/>
-                                                <constraint firstItem="thX-nz-TFv" firstAttribute="centerY" secondItem="Sk0-21-9Lu" secondAttribute="centerY" id="GaZ-K9-vlC"/>
-                                                <constraint firstItem="thX-nz-TFv" firstAttribute="leading" secondItem="Sk0-21-9Lu" secondAttribute="trailing" constant="10" id="Q6M-J7-Ygs"/>
+                                                <constraint firstItem="Sk0-21-9Lu" firstAttribute="leading" secondItem="NcF-Ts-46Z" secondAttribute="trailing" constant="10" id="3Lm-ev-Yhi"/>
+                                                <constraint firstItem="NcF-Ts-46Z" firstAttribute="leading" secondItem="ZMx-Ds-W1i" secondAttribute="leading" constant="10" id="7XT-OA-RnD"/>
+                                                <constraint firstItem="thX-nz-TFv" firstAttribute="leading" secondItem="Sk0-21-9Lu" secondAttribute="trailing" constant="10" id="Hkk-ve-AZ1"/>
                                                 <constraint firstItem="Sk0-21-9Lu" firstAttribute="centerY" secondItem="ZMx-Ds-W1i" secondAttribute="centerY" id="Sgl-DH-XcL"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="thX-nz-TFv" secondAttribute="trailing" constant="20" id="cRJ-3R-xtx"/>
+                                                <constraint firstItem="NcF-Ts-46Z" firstAttribute="centerY" secondItem="ZMx-Ds-W1i" secondAttribute="centerY" id="T28-7n-k0q"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="thX-nz-TFv" secondAttribute="trailing" constant="10" id="WTs-dy-ORk"/>
+                                                <constraint firstItem="thX-nz-TFv" firstAttribute="centerY" secondItem="ZMx-Ds-W1i" secondAttribute="centerY" id="bvW-MZ-Dfv"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -94,13 +103,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZv-VC-Fxk" customClass="BarChartView" customModule="Charts">
-                                <rect key="frame" x="0.0" y="431" width="390" height="300"/>
-                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="7hK-xn-wyH"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s3g-B7-v95">
                                 <rect key="frame" x="75" y="299" width="57" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -119,6 +121,13 @@
                                     <action selector="QuickExercise:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="6Wh-mu-swb"/>
                                 </connections>
                             </button>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZv-VC-Fxk" customClass="BarChartView" customModule="Charts">
+                                <rect key="frame" x="0.0" y="431" width="390" height="300"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="7hK-xn-wyH"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
@@ -135,7 +144,7 @@
                             <constraint firstItem="WvB-9D-c48" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="yjj-kC-zkI"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="홈" image="house" catalog="system" id="LYm-V9-W2c"/>
+                    <tabBarItem key="tabBarItem" title="" image="home" id="LYm-V9-W2c"/>
                     <navigationItem key="navigationItem" id="GSW-dz-TBf"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -170,12 +179,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="house" catalog="system" width="128" height="104"/>
+        <image name="flames" width="512" height="512"/>
+        <image name="home" width="24" height="24"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
