--- a/RankFit/Rank/Rank.storyboard
+++ b/RankFit/Rank/Rank.storyboard
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--랭킹-->
+        <!--My Rank View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="MyRankViewController" id="Y6W-OH-hqX" customClass="MyRankViewController" customModule="RankFit" customModuleProvider="target" sceneMemberID="viewController">
@@ -44,7 +44,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="완료한 운동" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWa-BQ-Ee4">
                                                     <rect key="frame" x="20" y="20" width="350" height="88"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50위" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xb-XV-PsB">
@@ -53,7 +53,7 @@
                                                         <constraint firstAttribute="width" constant="50" id="i9V-ti-Xq8"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -176,7 +176,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="tDP-4g-ewN" secondAttribute="bottom" id="vdn-VQ-nrN"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="랭킹" image="person.2" catalog="system" id="WLX-Im-MiT"/>
+                    <tabBarItem key="tabBarItem" title="" image="trophy" id="WLX-Im-MiT"/>
                     <navigationItem key="navigationItem" id="iRh-dj-g6s">
                         <barButtonItem key="rightBarButtonItem" style="done" id="YUY-ck-KRl">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="8X4-GH-TK3">
@@ -190,6 +190,7 @@
                                         <command title="성별" id="Gmn-hT-HP9"/>
                                         <command title="나이" id="sh2-VH-OXb"/>
                                         <command title="맞춤(종합)" id="GMN-ez-UaY"/>
+                                        <command title="러닝" id="6qg-Uh-cWo"/>
                                     </children>
                                 </menu>
                                 <state key="normal" title="마이랭킹"/>
@@ -329,7 +330,7 @@
         <image name="exclamationmark.circle" catalog="system" width="128" height="123"/>
         <image name="list.bullet" catalog="system" width="128" height="87"/>
         <image name="multiply.circle" catalog="system" width="128" height="123"/>
-        <image name="person.2" catalog="system" width="128" height="82"/>
+        <image name="trophy" width="24" height="24"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
